--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,9 @@
 node_modules/
 package-lock.json
 
-# Variables de entorno
+# Environment variables
 .env
+
+# Docker files
+Dockerfile
+docker-compose.yml
